--- a/projects.json
+++ b/projects.json
@@ -6,10 +6,10 @@
         "img2": "https://i.ibb.co/LxKPx0f/sunglass-2.jpg",
         "img3": "https://i.ibb.co/4sfQr8S/sunglass3.jpg",
         "Technology": "Firebase, React, NodeJS, BootStrap, ReactRouter, MetrialUI, Mongodb.",
-        "Project-Details": " This is a sunglass companies website. a user enters this website by email and Password. If a user is logged in,she/he sees a Dashboard route and he/she sees his Order list. Every user writes a review and sees this review in the Home Section",
-        "GitHub-Server": "https://github.com/aimless00/SUnglass-House-Server",
-        "GitHub-Client": "https://github.com/aimless00/Sunglass-House-Client",
-        "Live-Link": "https://sunglass-2bba5.web.app/"
+        "Project_Details": " This is a sunglass companies website. a user enters this website by email and Password. If a user is logged in,she/he sees a Dashboard route and he/she sees his Order list. Every user writes a review and sees this review in the Home Section",
+        "GitHub_Server": "https://github.com/aimless00/SUnglass-House-Server",
+        "GitHub_Client": "https://github.com/aimless00/Sunglass-House-Client",
+        "Live_Link": "https://sunglass-2bba5.web.app/"
     },
     {
         "id": 2,
@@ -18,10 +18,10 @@
         "img2": "https://i.ibb.co/m574d5K/tour2.jpg",
         "img3": "https://i.ibb.co/3CGqpQR/tour3.jpg",
         "Technology": "Tolls: Firebase, React, NodeJS, BootStrap, ReactRouter, Mongodb.",
-        "Project-Details": " This is a Tour and Travel website. Implement a Private Route on this website. Build a login and Registration pages because a user login/registration this website. Admin can update default status.",
-        "GitHub-Server": "https://github.com/aimless00/Tour-Love-Server",
-        "GitHub-Client": "https://github.com/aimless00/Tour-Love-Client",
-        "Live-Link": "https://tour-love.web.app/"
+        "Project_Details": " This is a Tour and Travel website. Implement a Private Route on this website. Build a login and Registration pages because a user login/registration this website. Admin can update default status.",
+        "GitHub_Server": "https://github.com/aimless00/Tour-Love-Server",
+        "GitHub_Client": "https://github.com/aimless00/Tour-Love-Client",
+        "Live_Link": "https://tour-love.web.app/"
     },
     {
         "id": 3,
@@ -30,10 +30,10 @@
         "img2": "https://i.ibb.co/MDtf9Sq/lab2.jpg",
         "img3": null,
         "Technology": "Tolls: Firebase, React, BootStrap, ReactRouter.",
-        "Project-Details": " It is a Hospital service related website.If the user is not logged in then he doesn't explore the details section.Every user logged in this website by email and password and Google Account.",
-        "GitHub-Server": null,
-        "GitHub-Client": "https://github.com/aimless00/National-Lab",
-        "Live-Link": "https://national-lab-alamin.web.app/"
+        "Project_Details": " It is a Hospital service related website.If the user is not logged in then he doesn't explore the details section.Every user logged in this website by email and password and Google Account.",
+        "GitHub_Server": null,
+        "GitHub_Client": "https://github.com/aimless00/National-Lab",
+        "Live_Link": "https://national-lab-alamin.web.app/"
     },
     {
         "id": 4,
@@ -42,9 +42,9 @@
         "img2": "https://i.ibb.co/NSzGK6k/language2.jpg",
         "img3": null,
         "Technology": "Tolls: Firebase, React, BootStrap, ReactRouter.",
-        "Project-Details": " It is a service related website.Every User add a language to learn. and Impliment react Router",
-        "GitHub-Server": null,
-        "GitHub-Client": "https://github.com/aimless00/Learn-Language",
-        "Live-Link": "https://alamin-language-teaching-service.netlify.app/"
+        "Project_Details": " It is a service related website.Every User add a language to learn. and Impliment react Router",
+        "GitHub_Server": null,
+        "GitHub_Client": "https://github.com/aimless00/Learn-Language",
+        "Live_Link": "https://alamin-language-teaching-service.netlify.app/"
     }
 ]
